# ingestinator5000

./: .gitignore  CMakeLists.txt  README.md  app.py  ingestinator
ingestinator_5000_GUI/: package-lock.json  package.json
ingestinator_5000_GUI/src/: index.html  index.js
lib/ffmpeg/ffmpeg_examples/: decode_filter_video.c  decode_video.c
src/: ingestinator.c  ingestinator.h  ingestinatorFunctions.c  ingestinatorFunctions.h
